# Rust-In-Replit

./: .gitpod.yml  .lesson.sh  .replit  .reset.sh  .solution.sh  .test.sh  Cargo.toml  README.md  answers.md  config.toml  fcc  replit.nix  techstack.md  techstack.yml  test.sh
.github/workflows/: crowdin-download.yml  crowdin-upload.yml
src/: fcc_term.rs  main.rs
tooling/: answers-cli-calculator.md  answers-combiner.md  answers-image-combiner.md  fcc  fcc.js  lesson.js  parser.js  reset.js  set-locale.js  solution.js  switch.js  t.js  test.js
tooling/locales/: conf.js
tooling/locales/Italian/: answers-calculator.md  answers-combiner.md
tooling/locales/chinese/: answers-calculator.md  answers-combiner.md  comments.json
tooling/locales/en/: answers-calculator.md  answers-combiner.md  comments.json
tooling/locales/english/: answers-calculator.md
tooling/locales/es/: answers-calculator.md  answers-combiner.md  comments.json
tooling/locales/italian/: comments.json
tooling/locales/portuguese/: answers-combiner.md  comments.json
tooling/locales/pt/: answers-calculator.md  answers-combiner.md
tooling/locales/spanish/: answers-calculator.md  answers-combiner.md  comments.json
tooling/locales/ukrainian/: answers-calculator.md  answers-combiner.md  comments.json
tooling/locales/zh/: answers-calculator.md  answers-combiner.md  comments.json
